--- a/DBProjectServer/DBProject.csproj
+++ b/DBProjectServer/DBProject.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <ProjectReference Include="../Entities/Entities.csproj" />
     <ProjectReference Include="../Contracts/Contracts.csproj" />
     <ProjectReference Include="../Repository/Repository.csproj" />
